syntax = "proto3";

package chat;

import "google/protobuf/timestamp.proto";

message EmptyMessage {}
message ConnectRequest { string user = 1; }

message NewMessageRequest {
  string user = 1;
  string memo = 2;
  string channel = 3;
  google.protobuf.Timestamp post_date = 4;
}

message NewMessageResponse { int32 id = 1; }

message EditMessageRequest {
  int32 id = 1;
  string memo = 2;
}

message NewChannelRequest {
  string name = 1;
  string description = 2;
  string owner = 3;
}

message NewChannelResponse { int32 id = 1; }

message EditChannelRequest {
  string old_name = 1;
  string new_name = 2;
  string description = 3;
}

message NewUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string image_path = 4;
}

message NewUserResponse { int32 id = 1; }

message EditUserRequest {
  string old_name = 1;
  string email = 2;
  string name = 3;
  string old_password = 4;
  string password = 5;
}

message BroadcastMessage {
  NewMessageRequest chat_message = 1;
  NewChannelRequest channel = 2;
  NewUserRequest user = 3;
}

service ChatService {
  rpc Connect(ConnectRequest) returns (stream BroadcastMessage);
  rpc AddMessage(NewMessageRequest) returns (NewMessageResponse);
  rpc AddChannel(NewChannelRequest) returns (NewChannelResponse);
  rpc AddUser(NewUserRequest) returns (NewUserResponse);
  rpc EditMessage(EditMessageRequest) returns (EmptyMessage);
  rpc EditChannel(EditChannelRequest) returns (EmptyMessage);
  rpc EditUser(EditUserRequest) returns (EmptyMessage);
}